--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 @import "~jspsych/css/jspsych.css";
 
-$font-family: 'Courier New', Courier, monospace;
+$font-family: "Courier New", Courier, monospace;
 $font-size: 18pt;
 
 div {
@@ -34,29 +34,30 @@ p {
   top: 0;
   left: calc(50% - min(600px, 40vw) - 10vw);
   box-sizing: border-box;
-  
-  .top, .bottom {
+
+  .top,
+  .bottom {
     position: absolute;
     border: 3px white solid;
     height: 280px;
     max-height: 30vh;
     width: 500px;
     left: calc(50% - min(250px, 40vw));
-  
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     white-space: pre;
   }
-  
+
   .top {
     top: 0;
   }
-  
+
   .bottom {
     bottom: 0;
   }
-  
+
   .center-text {
     position: absolute;
     height: 70vh;
@@ -71,7 +72,7 @@ p {
       line-height: 1;
     }
     position: absolute;
-    bottom: max(-15vh, -120px);
+    bottom: calc(max(-15vh, -120px));
   }
 
   .error {
